--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,15 @@ dist/
 
 # Environment variables
 .env
+.env.*
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 backend/.env
+backend/.env.*
+!backend/.env.example
 
 # Logs
 *.log
